# btaudit

./: LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.py  uninstall.sh
docker/: Dockerfile  docker-compose.yml
docs/: LEGAL.md  USAGE.md
examples/reports/: example_report.csv  example_report.html  example_scan.json
src/btaudit/: __init__.py  cli.py  consent.py  models.py  oui_db.py
src/btaudit/analyzers/: __init__.py  categorizer.py  security_analyzer.py
src/btaudit/dashboard/: __init__.py  app.py
src/btaudit/reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py
src/btaudit/scanners/: __init__.py  ble_scanner.py  classic_scanner.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_consent.py  test_models.py  test_oui_and_reporters.py  test_security_analyzer.py
