[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btaudit"
version = "1.0.0"
description = "Bluetooth Security Auditing and Inventory Tool"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Monish Paramasivam" }]
keywords = ["bluetooth", "security", "audit", "ble", "inventory", "infosec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
requires-python = ">=3.12"
dependencies = [
    "bleak>=0.21.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
classic = [
    "pybluez2>=0.46",
]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = [
    "btaudit[dashboard,dev]",
]

[project.scripts]
btaudit = "btaudit.cli:main"

[project.urls]
Homepage = "https://github.com/monishparamasivam/btaudit"
Repository = "https://github.com/monishparamasivam/btaudit"
"Bug Tracker" = "https://github.com/monishparamasivam/btaudit/issues"
Documentation = "https://github.com/monishparamasivam/btaudit/blob/main/docs/USAGE.md"

[tool.hatch.build.targets.wheel]
packages = ["src/btaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src/btaudit --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/btaudit"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
